Add push notification support and update app config
Integrated Expo push notifications with permission and token handling in App.tsx. Updated app.json with new icon, notification permissions, EAS projectId, and added expo-secure-store plugin. Added icon2.png asset and updated dependencies to include expo-notifications, expo-constants, expo-device, and related packages.

--- a/CiftciApp/app.json
+++ b/CiftciApp/app.json
@@ -4,7 +4,7 @@
     "slug": "CiftciApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon2.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -13,7 +13,12 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -22,10 +27,20 @@
       },
       "usesCleartextTraffic": true,
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.evie47.CiftciApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f18467ff-fc40-4c69-9e71-e47056d31b33"
+      }
+    },
+    "owner": "evie47",
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
