--- a/CiftciApp/package.json
+++ b/CiftciApp/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,8 +15,13 @@
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
     "expo": "~54.0.25",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
+    "expo-device": "~8.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.13",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.554.0",
     "react": "19.1.0",
