Update notification handling and Android icon
Changed notification handler to use banners and show notifications in the list. Updated Android adaptive icon to icon3.png and added expo-build-properties plugin for usesCleartextTraffic. Upgraded Expo and related dependencies to latest versions.

--- a/CiftciApp/app.json
+++ b/CiftciApp/app.json
@@ -22,10 +22,9 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon2.png",
+        "foregroundImage": "./assets/icon3.png",
         "backgroundColor": "#ffffff"
       },
-      "usesCleartextTraffic": true,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.evie47.CiftciApp",
@@ -42,7 +41,15 @@
     "owner": "evie47",
     "plugins": [
       "expo-secure-store",
-      "expo-notifications"
+      "expo-notifications",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
+      ]
     ]
   }
 }
