--- a/CiftciApp/package.json
+++ b/CiftciApp/package.json
@@ -14,20 +14,23 @@
     "@react-navigation/elements": "^2.8.3",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.7.0",
-    "expo": "~54.0.25",
-    "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.18",
-    "expo-device": "~8.0.9",
-    "expo-image-picker": "~17.0.8",
-    "expo-location": "~19.0.7",
-    "expo-notifications": "~0.32.13",
-    "expo-secure-store": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo": "~54.0.27",
+    "expo-build-properties": "~1.0.10",
+    "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-image-picker": "~17.0.9",
+    "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.14",
+    "expo-secure-store": "~15.0.8",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "lucide-react-native": "^0.554.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
